--- a/newsletter/page4.html
+++ b/newsletter/page4.html
@@ -203,7 +203,7 @@
 
                 　　這一份把別人家的父母當自家老人看待的心意，促成這個位處山邊、以農業為主的小小聚落，綿延傳遞古人｢里仁為美」的精神！
             </div>
-            <div class="col-sm=4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
+            <div class="col-sm-4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
                 <img src="resource/24.jpg" class="img-fluid">
                 <img src="resource/25.jpg" class="img-fluid">
             </div>
